Fix [#37315] Mirror+MeshDeform cause crash when Vertex Group is referred

One hour of efforts to spot such a small dummy typo!